:feat: change text

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Friend Event{% endblock %}
+{% block title %}Friend Event Backend{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
