:feat: change text

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -47,7 +47,7 @@
 {% block body %}
     <div class="container">
         <div class="hero">
-            <h1>Friend Event</h1>
+            <h1>Friend Event Backend</h1>
             <p>Welcome {{ app.user ? app.user.pseudo : "Guest" }} to the Friend Event application.</p>
         </div>
         <p>This application allows you to create events and invite your friends to them. Whether it's a birthday party, a casual get-together, or a professional meeting, Friend Event makes it easy to organize and manage your events.</p>
