:feat: change text

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -48,7 +48,7 @@
     <div class="container">
         <div class="hero">
             <h1>Friend Event Backend</h1>
-            <p>Welcome {{ app.user ? app.user.pseudo : "Guest" }} to the Friend Event application.</p>
+            <p>Welcome {{ app.user ? app.user.pseudo : "Guest" }} to the Friend Event application !</p>
         </div>
         <p>This application allows you to create events and invite your friends to them. Whether it's a birthday party, a casual get-together, or a professional meeting, Friend Event makes it easy to organize and manage your events.</p>
         <p>Get started by exploring the options below:</p>
