--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -69,11 +69,22 @@
                 <td>{{ event.date ? event.date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ event.user.pseudo }}</td>
                 <td class="actions">
-                    <a href="{{ path('app_event_show', {'id': event.id}) }}">show</a>
-                    <a href="{{ path('app_event_edit', {'id': event.id}) }}">edit</a>
+                    <button>
+                        <a href="{{ path('app_event_show', {'id': event.id}) }}">show</a>
+                    </button>
+                    <button>
+                        <a href="{{ path('app_event_edit', {'id': event.id}) }}">edit</a>
+                    </button>
+                    <form action="{{ path('app_event_delete', {'id': event.id}) }}" method="post">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
+                        <button type="submit">delete</button>
+                    </form>
                 </td>
                 <td class="participation">
-                    <a href="{{ path('app_event_register', {'id': event.id}) }}">participate</a>
+                    <button>
+                        <a href="{{ path('app_event_register', {'id': event.id}) }}">participate</a>
+                    </button>
                 </td>
             </tr>
         {% else %}
