:feat: replace button by svg

--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -69,22 +69,16 @@
                 <td>{{ event.date ? event.date|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ event.user.pseudo }}</td>
                 <td class="actions">
-                    <button>
-                        <a href="{{ path('app_event_show', {'id': event.id}) }}">show</a>
-                    </button>
-                    <button>
-                        <a href="{{ path('app_event_edit', {'id': event.id}) }}">edit</a>
-                    </button>
+                    <a href="{{ path('app_event_show', {'id': event.id}) }}"><img src="{{ asset('icons/show.svg') }}" width=20 height=20 /></a>
+                    <a href="{{ path('app_event_edit', {'id': event.id}) }}"><img src="{{ asset('icons/edit.svg') }}" width=20 height=20 /></a>
                     <form action="{{ path('app_event_delete', {'id': event.id}) }}" method="post">
                         <input type="hidden" name="_method" value="DELETE">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
-                        <button type="submit">delete</button>
+                        <button type="submit"><img src="{{ asset('icons/delete.svg') }}" width=20 height=20 /></button>
                     </form>
                 </td>
                 <td class="participation">
-                    <button>
-                        <a href="{{ path('app_event_register', {'id': event.id}) }}">participate</a>
-                    </button>
+                    <a href="{{ path('app_event_register', {'id': event.id}) }}"><img src="{{ asset('icons/handUp.svg') }}" width=40 height=40 /></a>
                 </td>
             </tr>
         {% else %}
